@@ -57,6 +57,7 @@ Version History:
  New Features:
  
   * Better ANSI support: background colors and underline mode now supported
+  * If you are in a tank, it will show a red line indicating turret facing, and other jumping mechs show a green line indicating jump heading
   
  Bug Fixes:
  
